@@ -9,6 +9,8 @@
 - Server startup scripts
 - New method "setMapImage" in NXSL class "NetObj"
 - New attribute "mapImage" in NXSL class "NetObj"
+- New NXSL class "Container"
+- Container autobind mode and script can be set from NXSL
 - Fixed issues: NX-60, NX-630, NX-916, NX-1151
 
 
